[HBI-303] fix z-index position for the header

--- a/lms/static/sass/blocks/_header.scss
+++ b/lms/static/sass/blocks/_header.scss
@@ -5,7 +5,7 @@
 	position: relative;
 	overflow: visible;
 	background: $header-bg;
-	z-index: 2;
+	z-index: 11;
 
 	.main-header {
 		display: flex;
